--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf output && rimraf .pulp-cache",
-    "build": "pulp build --optimise",
+    "build": "pulp build --optimise --to dist/main.js",
+    "watch": "pulp -w build --optimise --to dist/main.js",
+    "start2": "http-server -p 4001",
+    "start": "webpack-dev-server --port 4001",
     "postinstall": "bower install"
   },
   "keywords": [],
@@ -13,9 +16,13 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.8.8",
+    "html-webpack-include-assets-plugin": "^1.0.7",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "pulp": "^12.2.0",
     "purescript": "^0.12.0",
-    "purescript-psa": "^0.6.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "webpack": "3",
+    "webpack-dev-server": "2"
   }
 }
