--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf output && rimraf .pulp-cache",
-    "build": "pulp build --optimise --to dist/main.js",
-    "watch": "pulp -w build --optimise --to dist/main.js",
-    "start2": "http-server -p 4001",
-    "start": "webpack-dev-server --port 4001",
+    "build": "pulp build --optimise --to public/purs-dist/main.js",
+    "watch": "pulp -w build --optimise --to public/purs-dist/main.js",
+    "start": "PORT=4001 node bin/www",
     "postinstall": "bower install"
   },
   "keywords": [],
@@ -16,13 +15,15 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.8.8",
-    "html-webpack-include-assets-plugin": "^1.0.7",
-    "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.11.1",
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
+    "http-errors": "^1.7.2",
+    "http-proxy-middleware": "^0.19.1",
+    "jade": "^1.11.0",
+    "morgan": "^1.9.1",
     "pulp": "^12.2.0",
     "purescript": "^0.12.0",
-    "rimraf": "^2.6.2",
-    "webpack": "3",
-    "webpack-dev-server": "2"
+    "rimraf": "^2.6.2"
   }
 }
