--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "purescript-console": "^4.2.0",
     "purescript-effect": "^2.0.1",
     "purescript-halogen": "^4.0.0",
-    "purescript-affjax": "^6.0.0"
+    "purescript-affjax": "^6.0.0",
+    "purescript-foreign": "^5.0.0",
+    "purescript-simple-json": "^4.4.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
